# AutoBaby

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
autobaby/: core.py  foo.py  gui.py
backup/: pyproject1.toml  pyproject2.toml  pyproject3.toml
docs/: index.md  modules.md
test/: test.py
tests/: test_core.py  test_foo.py  提问.txt
